--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="./images/logo.svg" alt="">
         <nav>
             <ul class="menu">
-                <li><a href=".features">Features</a></li>
+                <li><a href="#features">Features</a></li>
                 <li><a href="#team">Team</a></li>
                 <li><a href="#sign-in">Sign In</a></li>
             </ul>
@@ -31,11 +31,15 @@
     </header>
     <main>
         <section class="features">
-            <img class="img-main" src="./images/illustration-intro.png" alt="">
-            <h1>All your files in one secure location, accessible anywhere.</h1>
-            <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share
-                and collaborate with friends family, and co-workers.</p>
-            <button>Get Started</button>
+            <div class="features-primary">
+                <img class="img-main" src="./images/illustration-intro.png" alt="">
+                <h1>All your files in one secure location, accessible anywhere.</h1>
+                <p>Fylo stores all your most important files in one secure location. Access them wherever you need,
+                    share
+                    and collaborate with friends family, and co-workers.</p>
+                <button>Get Started</button>
+            </div>
+
             <section class="container-features">
                 <article class="features-main">
                     <img class="icon-main" src="./images/icon-access-anywhere.svg" alt="">
@@ -44,7 +48,7 @@
                         follow you everywhere.</p>
                 </article>
                 <article class="features-main">
-                    <img class="icon-main" src="./images/icon-security.svg" alt="">
+                    <img class=" icon-main" src="./images/icon-security.svg" alt="">
                     <h2>Security you can trust</h2>
                     <p>2-factor authentication and user-controlled encryption are just a couple of the security features
                         we allow to help secure your files.</p>
@@ -62,19 +66,21 @@
                         file types to be securely stored and shared.</p>
                 </article>
             </section>
-            <img class="img-main" src="./images/illustration-stay-productive.png" alt="">
-            <div>
-                <h2>Stay productive, wherever you are</h2>
-                <p>Never let location be an issue when accessing your files. Fylo has you covered for all of
-                    your file storage needs.</p>
-                <p>Securely share files and folders with friends, family and colleagues for live collaboration.
-                    No email attachments required.</p>
-                <a href="">See how Fylo works <img src="./images/icon-arrow.svg" alt=""></a>
+            <div class="features-secundary">
+                <img class="img-main" src="./images/illustration-stay-productive.png" alt="">
+                <div>
+                    <h2>Stay productive, wherever you are</h2>
+                    <p>Never let location be an issue when accessing your files. Fylo has you covered for all of
+                        your file storage needs.</p>
+                    <p>Securely share files and folders with friends, family and colleagues for live collaboration.
+                        No email attachments required.</p>
+                    <a href="">See how Fylo works <img src="./images/icon-arrow.svg" alt=""></a>
+                </div>
             </div>
-
         </section>
         <section class="team">
             <div class="team-persons">
+                <img class="quotes" src="./images/bg-quotes.png" alt="">
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team
                     has become a well-oiled collaboration machine.</p>
                 <div>
@@ -105,37 +111,39 @@
                 questions, our support team would be happy to help you.</p>
             <form class="email" action="">
                 <input type="email" name="email" id="email" placeholder="email@example.com" required>
-                <input type="submit" value="Get Started For Free">
+                <span id="email-error"></span>
+                <input id="submit" type="submit" value="Get Started For Free">
             </form>
         </section>
     </main>
     <footer>
-        <img src="./images/logo.svg" alt="">
+        <img class="logo-footer" src="./images/logo.svg" alt="">
         <div>
-            <p><img src="./images/icon-location.svg" alt="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+            <p class="location"><img src="./images/icon-location.svg" alt="">Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed
                 do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-            <div>
+            <div class="contact">
                 <p><img src="./images/icon-phone.svg" alt="">+1-543-123-4567</p>
                 <p><img src="./images/icon-email.svg" alt="">example@fylo.com</p>
             </div>
-            <ul>
+            <ul class="links-features">
                 <li><a href="">About Us</a></li>
                 <li><a href="">Jobs</a></li>
                 <li><a href="">Press</a></li>
                 <li><a href="">Blog</a></li>
             </ul>
-            <ul>
+            <ul class="policy">
                 <li><a href="">Contact Us</a></li>
                 <li><a href="">Terms</a></li>
                 <li><a href="">Privacy</a></li>
             </ul>
-            <div class="">
-                <img src="./images/icon-facebook.svg" alt="">
-                <img src="./images/icon-twitter.svg" alt="">
-                <img src="./images/icon-instagram.svg" alt="">
+            <div class="rr-ss">
+                <a href=""><img src="./images/icon-facebook.svg" alt=""></a>
+                <a href=""><img src="./images/icon-twitter.svg" alt=""></a>
+                <a href=""><img src="./images/icon-instagram.svg" alt=""></a>
             </div>
         </div>
     </footer>
+    <script src="./main.js"></script>
 </body>
-
 </html>
